--- a/styles/styles.css
+++ b/styles/styles.css
@@ -421,10 +421,6 @@ body {
   }
 }
 
-.section-3 .text-blocks-container {
-  margin-bottom: 400px;
-}
-
 .section-3 .gamedev {
   display: block;
   width: 100%;
@@ -453,17 +449,18 @@ body {
 
 .section-4 {
   position: relative;
-  width: 100vw;
-  height: 100vh;
 }
 
-.section-4 .poster {
-  display: none;
-  width: 100vw;
-  height: 100vh;
+.throne {
+  display: block;
 }
 
-.section-4 .socials {
+.throne > img {
+  display: block;
+  width: 100%;
+}
+
+.socials {
   background-color: white;
   display: flex;
   align-items: flex-end;
@@ -475,7 +472,7 @@ body {
   right: 0;
 }
 
-.section-4 .socials::before {
+.socials::before {
   background-image: url(../assets/img/footer-bg.png);
   background-repeat: repeat-x;
   background-size: auto 100%;
@@ -488,7 +485,7 @@ body {
   right: 0;
 }
 
-.section-4 .socials .social {
+.socials .social {
   color: black;
   display: block;
   font-family: "Demon Letter";
@@ -497,15 +494,13 @@ body {
   position: relative;
   text-decoration: none;
   transition: color 0.25s ease;
-
-  opacity: 0;
 }
 
-.section-4 .socials .social:hover {
+.socials .social:hover {
   color: var(--fuchsiapink);
 }
 
-.section-4 .socials .social-logo {
+.socials .social-logo {
   display: block;
   height: 24px;
   position: absolute;
@@ -514,34 +509,13 @@ body {
   width: auto;
 }
 
-.section-4 .socials .social-logo > path {
+.socials .social-logo > path {
   fill: black;
   transition: fill 0.25s ease;
 }
 
-.section-4 .socials .social:hover .social-logo > path {
+.socials .social:hover .social-logo > path {
   fill: var(--fuchsiapink);
-}
-
-.section-4 .buy-button {
-  position: absolute;
-  bottom: calc(30px + 70px);
-  left: 50%;
-  transform: translateX(-50%);
-  margin: auto;
-  padding: 16px;
-  padding-bottom: 6px;
-  width: 310px;
-  height: 38px;
-  text-align: center;
-  display: block;
-  color: black;
-  background-color: var(--magicmint);
-  font-size: 25pt;
-  font-family: "ST Kooperativ", sans-serif;
-  text-decoration: none;
-
-  opacity: 0;
 }
 
 .section-animation {
@@ -606,65 +580,6 @@ body {
 
   100% {
     transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.section-4.fade-in {
-  animation: section4-poster-fade-in 1500ms ease-in-out;
-  animation-fill-mode: forwards;
-}
-
-@keyframes section4-poster-fade-in {
-  0% {
-    background: url("../assets/img/section-4.jpg") rgba(233, 138, 249, 1);
-    background-attachment: fixed;
-    background-size: auto 100lvh;
-    background-position: center center;
-    background-blend-mode: lighten;
-  }
-
-  100% {
-    background: url("../assets/img/section-4.jpg") rgba(233, 138, 249, 0);
-    background-attachment: fixed;
-    background-size: auto 100lvh;
-    background-position: center center;
-    background-blend-mode: lighten;
-  }
-}
-
-.section-4 .social.fade-in {
-  animation: section4-socials-fade-in 750ms ease-in-out;
-  animation-delay: 450ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes section4-socials-fade-in {
-  0% {
-    transform: translateY(100px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.section-4 .buy-button.fade-in {
-  animation: section4-button-fade-in 750ms ease-in-out;
-  animation-delay: 450ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes section4-button-fade-in {
-  0% {
-    transform: translateY(100px) translateX(-50%);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateY(0) translateX(-50%);
     opacity: 1;
   }
 }
