--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,10 +113,10 @@ body {
   display: table;
   width: 60%;
   top: 4vh;
-  left: 42.8%;
+  left: 50%;
   opacity: 1;
-  z-index: 1;
-  transform: translateX(-40%);
+  z-index: 3;
+  transform: translateX(-50%);
 }
 
 .menu-item {
@@ -284,6 +284,10 @@ body {
   padding-bottom: calc(100vh + 107px); /* CEH9 */
 }
 
+.section-2 .back-arrow {
+  display: none;
+}
+
 .section-2 .dont-blink {
   display: block;
   margin-top: 130px;
@@ -327,7 +331,12 @@ body {
   margin-top: 0;
 }
 .section-2 .bottom-button {
-  display: none;
+  bottom: 62px;
+  display: block;
+  left: 0;
+  text-align: center;
+  position: absolute;
+  width: 100%;
 }
 /* X. Section #2: About */
 
