--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ body {
   overflow: hidden;
   position: fixed;
   width: 100%;
-  height: 100lvh;
+  height: 100dvh;
   background-color: black;
   opacity: 1;
   z-index: 4;
